crates/minimal-tui/tests/snapshots/snapshots__detail_pane_marks_the_deny_all_default.snap
---
source: crates/minimal-tui/tests/snapshots.rs
assertion_line: 299
expression: render(&mut model)
---
"┌──────────────────────────────┐┌ api-staging · 00000000 ──────────────────────────────────────────┐"
"│      ▃🭕🭏🭕🭏 M I N I M A L     ││ project /src/api                  net     OwnIp                  │"
"│ ──────────────────────────── ││ user    chroma                    idle    -                      │"
"│ /                            ││ title   -                                                        │"
"│ ──────────────────────────── ││ bells   -                                                        │"
"│ ▼ host  v0.1              ●  ││ ─ Policy ─────────────────────────────────────────────────────── │"
"│   ▸ api-staging     OwnIp    ││ egress                                                           │"
"│                              ││   deny-all (default)                                             │"
"│                              ││ ingress                                                          │"
"│                              ││   deny-all                                                       │"
"│                              ││ ─ Preview (live screen snapshot) ─────────────────────────────── │"
"│                              ││ loading preview…                                                 │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘"
" ↑↓ move · / filter · enter attach · d destroy · r rename · n new · q quit                          "
