crates/minimal-tui/tests/snapshots/snapshots__filtered.snap
---
source: crates/minimal-tui/tests/snapshots.rs
expression: render(&model)
---
"┌ sessions ────────────────────┐┌──────────────────────────────────────────────────────────────────┐"
"│ / bench                      ││ no session selected                                              │"
"│ ──────────────────────────── ││                                                                  │"
"│ ▼ host  v0.1              ●  ││                                                                  │"
"│ ▼ vm  v0.1                ●  ││                                                                  │"
"│     bench               -    ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘"
" ↑↓ move · / filter · enter attach · d destroy · r rename · n new · q quit                          "
