crates/minimal-tui/tests/snapshots/snapshots__preview_tab_with_screen_snapshot.snap
---
source: crates/minimal-tui/tests/snapshots.rs
expression: render(&model)
---
"┌ sessions ────────────────────┐┌ api-staging · 00000000 ──────────────────────────────────────────┐"
"│ /                            ││ project /src/api                  net   ?                        │"
"│ ──────────────────────────── ││ user    ?                         idle  -                        │"
"│ ▼ host  v0.1              ●  ││ title   -                                                        │"
"│   ▸ api-staging          -   ││ bells   -                                                        │"
"│                              ││ ─ Policy ─────────────────────────────────────────────────────── │"
"│                              ││ loading policy…                                                  │"
"│                              ││ ─ Preview (live screen snapshot) ─────────────────────────────── │"
"│                              ││ $ cargo run                                                      │"
"│                              ││     Compiling minimal v0.1 (1457 deps)…                          │"
"│                              ││     Finished `dev` profile in 3m 04s                             │"
"│                              ││ $                                                                │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘"
" ↑↓ move · / filter · enter attach · d destroy · r rename · n new · q quit                          "
