crates/minimal-tui/tests/snapshots/snapshots__single_provider.snap
---
source: crates/minimal-tui/tests/snapshots.rs
expression: render(&model)
---
"┌ sessions ────────────────────┐┌────────────────────────────────────────────[Info] Policy Preview ┐"
"│ /                            ││ no session selected                                              │"
"│ ──────────────────────────── ││                                                                  │"
"│ ▼ host  v0.1              ●  ││                                                                  │"
"│     api-staging          -   ││                                                                  │"
"│     (unnamed)            -   ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘"
" ↑↓ move · / filter · tab switch · enter attach · d destroy · r rename · n new · q quit             "
